Enable Domain Ext .localhost

--- a/nginx/enabled/example.conf
+++ b/nginx/enabled/example.conf
@@ -2,7 +2,7 @@ server {
 	disable_symlinks off;
 
 	listen  80;
-	server_name ~^example\.com(\.dev)?$;
+	server_name ~^example\.com(\.dev|\.localhost)?$;
 
 	root /vhosts/example.com/httpdocs;
 
@@ -19,7 +19,7 @@ server {
 server {
 	disable_symlinks off;
 
-	server_name ~^((?<subdomain>.*)\.)example\.com(\.dev)?$;
+	server_name ~^((?<subdomain>.*)\.)example\.com(\.dev|\.localhost)?$;
 
 	root /vhosts/example.com/subdomains/${subdomain}/httpdocs;
 
