--- a/nginx/enabled/php5.conf
+++ b/nginx/enabled/php5.conf
@@ -2,7 +2,7 @@ server {
 	disable_symlinks off;
 
 	listen  80;
-	server_name ~^php5(\.dev)?$;
+	server_name ~^php5(\.dev|\.localhost)?$;
 
 	root /vhosts/php5/httpdocs;
 
@@ -19,7 +19,7 @@ server {
 server {
 	disable_symlinks off;
 
-	server_name ~^((?<subdomain>.*)\.)php5(\.dev)?$;
+	server_name ~^((?<subdomain>.*)\.)php5(\.dev|\.localhost)?$;
 
 	root /vhosts/php5/subdomains/${subdomain}/httpdocs;
 
