--- a/nginx/enabled/php7.conf
+++ b/nginx/enabled/php7.conf
@@ -2,7 +2,7 @@ server {
 	disable_symlinks off;
 
 	listen  80;
-	server_name ~^php7(\.dev)?$;
+	server_name ~^php7(\.dev|\.localhost)?$;
 
 	root /vhosts/php7/httpdocs;
 
@@ -19,7 +19,7 @@ server {
 server {
 	disable_symlinks off;
 
-	server_name ~^((?<subdomain>.*)\.)php7(\.dev)?$;
+	server_name ~^((?<subdomain>.*)\.)php7(\.dev|\.localhost)?$;
 
 	root /vhosts/php7/subdomains/${subdomain}/httpdocs;
 
