--- a/nginx/enabled/_default_.conf
+++ b/nginx/enabled/_default_.conf
@@ -1,13 +1,12 @@
 server {
 	listen 80 default_server;
 	listen [::]:80 default_server;
-
-	root /vhosts/_default_/httpdocs;
-
-	index index.html index.htm index.php;
+	# include /nginx/snippets/ssl-defaultserver.conf;
 
 	server_name _;
 
+	index index.html index.htm index.php;
+	root /vhosts/_default_/httpdocs;
 	location / {
 		# First attempt to serve request as file, then
 		# as directory, then fall back to displaying a 404.
