--- a/nginx/snippets/php5.6.23-fpm.conf
+++ b/nginx/snippets/php5.6.23-fpm.conf
@@ -8,7 +8,7 @@ location ~ \.php(/|$) {
 	include fastcgi_params;
 
 	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	fastcgi_param HTTPS off;
+	fastcgi_param HTTPS on;
 
 	fastcgi_buffers 16 16k;
 	fastcgi_buffer_size 32k;
