Change snippet path to default php-fpm

--- a/nginx/enabled/_default_.conf
+++ b/nginx/enabled/_default_.conf
@@ -13,5 +13,5 @@ server {
 		try_files $uri $uri/ /index.php$is_args$args =404;
 	}
 
-	include /nginx/snippets/php7.0.8-fpm.conf;
+	include /nginx/snippets/php-fpm-default.conf;
 }
