--- a/nginx/snippets/php7.0.8-fpm.conf
+++ b/nginx/snippets/php7.0.8-fpm.conf
@@ -1,15 +1,4 @@
 location ~ \.php(/|$) {
-	try_files      $uri = 404;
-	
+	include /nginx/snippets/php-fastcgi-settings.conf;
 	fastcgi_pass fpm7-0-8:9000;
-	fastcgi_index  index.php;
-	fastcgi_split_path_info ^(.+\.php)(/.*)$;
-
-	include fastcgi_params;
-
-	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	fastcgi_param HTTPS on;
-
-	fastcgi_buffers 16 16k;
-	fastcgi_buffer_size 32k;
 }
