--- a/nginx/snippets/ssl-defaultserver.conf
+++ b/nginx/snippets/ssl-defaultserver.conf
@@ -1,3 +1,3 @@
 listen 443 ssl default_server;
 listen [::]:443 ssl default_server;
-include /nginx/snippets/ssl.conf;
+include /nginx/snippets/snippet-ssl.conf;
