Refactored and modulized snippet root-cors

--- a/nginx/snippets/snippet-location-root-cors.conf
+++ b/nginx/snippets/snippet-location-root-cors.conf
@@ -4,12 +4,7 @@
 ### location / {
 
 	if ($request_method = 'OPTIONS') {
-		add_header 'Access-Control-Allow-Origin' '*';
-		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-		#
-		# Custom headers and headers various browsers *should* be OK with but aren't
-		#
-		add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
+		include /nginx/snippets/snippet-location-cors-headers.conf;
 		#
 		# Tell client that this pre-flight info is valid for 20 days
 		#
@@ -19,16 +14,10 @@
 		return 204;
 	}
 	if ($request_method = 'POST') {
-		add_header 'Access-Control-Allow-Origin' '*';
-		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-		add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
-		add_header 'Access-Control-Expose-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
+		include /nginx/snippets/snippet-location-cors-headers.conf;
 	}
 	if ($request_method = 'GET') {
-		add_header 'Access-Control-Allow-Origin' '*';
-		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-		add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
-		add_header 'Access-Control-Expose-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
+		include /nginx/snippets/snippet-location-cors-headers.conf;
 	}
 
 ### }
