Remove default port 80

--- a/nginx/enabled/example.com.conf
+++ b/nginx/enabled/example.com.conf
@@ -1,8 +1,6 @@
 server {
 	disable_symlinks off;
-
-	listen  80;
-	server_name ~^example\.com(\.dev|\.localhost)?$;
+	server_name ~^example\.com(\.localhost)?$;
 
 	root /vhosts/example.com/httpdocs;
 
@@ -18,8 +16,7 @@ server {
 
 server {
 	disable_symlinks off;
-
-	server_name ~^((?<subdomain>.*)\.)example\.com(\.dev|\.localhost)?$;
+	server_name ~^((?<subdomain>.*)\.)example\.com(\.localhost)?$;
 
 	root /vhosts/example.com/subdomains/${subdomain}/httpdocs;
 
