add php7-ext as default example for the guide

--- a/nginx/bin/dns.txt.example
+++ b/nginx/bin/dns.txt.example
@@ -6,5 +6,7 @@ php5.localhost
 *.php5.localhost
 php7.localhost
 *.php7.localhost
+php7-ext.localhost
+*.php7-ext.localhost
 ssl.localhost
 *.ssl.localhost
