--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - fpm5-6-23
       - fpm7-0-8
       - fpm-ext7-0-8
+      - fpm8-0-0
+      - fpm-ext8-0-0
     ports:
       - "80:80"
       - "443:443"
@@ -38,8 +40,22 @@ services:
     volumes_from:
       - data
 
+  fpm8-0-0:
+    image: php:8.0.0-fpm-alpine
+    restart: always
+    volumes_from:
+      - data
+
+  fpm-ext8-0-0:
+    build:
+      context: ./dockerfiles
+      dockerfile: php-8-0-0-fpm-ext-alpine.Dockerfile
+    restart: always
+    volumes_from:
+      - data
+
   db:
-    image: harianto/mysql
+    image: mariadb #v10.5.8
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
@@ -49,6 +65,10 @@ services:
   dbadmin:
     image: phpmyadmin/phpmyadmin
     restart: always
+    environment:
+      PMA_HOST: db
+      PMA_USER: root # Remove line for production
+      PMA_PASSWORD: root # Remove line for production
     depends_on:
       - db
 
