--- a/nginx/snippets/php-5.6.23-fpm.conf
+++ b/nginx/snippets/php-5.6.23-fpm.conf
@@ -1,4 +1,4 @@
 location ~ \.php(/|$) {
 	include /nginx/snippets/snippet-php-fastcgi.conf;
-	fastcgi_pass fpm7-0-8:9000;
+	fastcgi_pass 5-6-23-fpm:9000;
 }
