--- a/nginx/snippets/php-7.0.8-fpm.conf
+++ b/nginx/snippets/php-7.0.8-fpm.conf
@@ -1,4 +1,4 @@
 location ~ \.php(/|$) {
 	include /nginx/snippets/snippet-php-fastcgi.conf;
-	fastcgi_pass fpm-ext7-0-8:9000;
+	fastcgi_pass 7-0-8-fpm:9000;
 }
