--- a/nginx/snippets/php-8.0.0-fpm.conf
+++ b/nginx/snippets/php-8.0.0-fpm.conf
@@ -1,4 +1,4 @@
 location ~ \.php(/|$) {
 	include /nginx/snippets/snippet-php-fastcgi.conf;
-	fastcgi_pass fpm5-6-23:9000;
+	fastcgi_pass 8-0-0-fpm:9000;
 }
