simpelfied to .localhost

--- a/data/nginx/enabled/php7-ext.conf
+++ b/data/nginx/enabled/php7-ext.conf
@@ -2,7 +2,7 @@ server {
 	disable_symlinks off;
 
 	listen  80;
-	server_name ~^php7-ext(\.dev|\.localhost)?$;
+	server_name ~^php7-ext(\.localhost)?$;
 
 	root /vhosts/php7-ext/httpdocs;
 
@@ -19,7 +19,7 @@ server {
 server {
 	disable_symlinks off;
 
-	server_name ~^((?<subdomain>.*)\.)php7-ext(\.dev|\.localhost)?$;
+	server_name ~^((?<subdomain>.*)\.)php7-ext(\.localhost)?$;
 
 	root /vhosts/php7-ext/subdomains/${subdomain}/httpdocs;
 
