--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,13 @@
-version: '2'
+# create volume: docker volume create --name=letsencrypt
+volumes:
+  letsencrypt:
+    external: true
+
+# create network: docker network create xnmp-network
+networks:
+  default:
+    name: xnmp-network
+    external: true
 
 services:
   nginx:
@@ -17,7 +26,6 @@ services:
       - ./data/nginx/enabled:/etc/nginx/conf.d
       - ./data/nginx/snippets:/nginx/snippets
       - ./data/nginx/certificates:/nginx/certificates
-      # - ./data/letsencrypt/data:/etc/letsencrypt:ro
     volumes_from:
       - data
 
@@ -75,9 +83,4 @@ services:
     volumes:
       - ./data/vhosts:/vhosts
       - ./data/tmp:/tmp
-
-# create network: docker network create xnmp-network
-networks:
-  default:
-    external:
-      name: xnmp-network
+      #- letsencrypt:/etc/letsencrypt:ro
